--- a/guitarChords.html
+++ b/guitarChords.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!--Author: Ian McTavish ianmct@surenet.net Twitter: @ianmct - if you find this useful, let me know!-->
 <meta charset="utf-8">
 <style>
 	body{padding:0;margin:0;font-size:2.0em;}
